<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SHARideV2</string>
    <string name="web_client_id">178112270595-mbkueg137033n1edkrmd2ocepfk6b2ig.apps.googleusercontent.com</string>
    <string name="map_id" translatable="false">ed88a81f472d4f02</string>
    <string name="google_api_key" translatable="false">AIzaSyCfsP1xX9W9IMQ7JJdusjltI9G6X3ODLA0</string>
    <string name="share_app_link" translatable="false">joshuakme.github.io/SHARide-Web/</string>
    <string name="price" translatable="false">RM %.2f</string>
    <string name="firebase_collection_user_location">userLocation</string>
    <string name="screen_title_home">Home</string>
    <string name="screen_title_booking">Booking</string>
    <string name="screen_title_messages">Messages</string>
    <string name="screen_title_profile">Profile</string>
    <string name="home_fragment_welcome_user">Hi %s</string>
    <string name="home_fragment_welcome_user_area">Unknown location</string>
    <string name="home_fragment_pick_up_location">Origin location</string>
    <string name="home_fragment_destination_location">Destination location</string>
    <string name="home_fragment_date_time">Date &amp; Time</string>
    <string name="home_fragment_select_more">More</string>
    <string name="home_fragment_add_ride_cta">Add Ride</string>
    <string name="home_fragment_offer_ride_vehicle">Vehicle</string>
    <string name="home_fragment_search_hint">Enter destination or starting point</string>
    <string name="home_section_recent_rides_title">Recent rides</string>
    <string name="home_section_categories_rides_title">Categories</string>
    <string name="home_section_nearby_rides_title">Nearby Rides</string>
    <string name="home_section_share_this_app_title">Share this app</string>
    <string name="search_fragment_now">Now</string>
    <string name="search_fragment_schedule">Schedule</string>
    <string name="search_fragment_change_role_to_driver">Driver</string>
    <string name="search_fragment_change_role_to_passenger">Passenger</string>
    <string-array name="malaysia_state_array">
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Kuala Lumpur</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Terengganu</item>
    </string-array>
    <string name="search_fragment_origin_default" translatable="false" tools:ignore="ExtraTranslation">Current location</string>
    <string name="search_fragment_search_result_place_distance_address">%.2fkm \u200B \u2022 \u200B %s</string>
    <string name="search_fragment_search_result_place_distance_address_0km">%dkm \u200B \u2022 \u200B %s</string>
    <string name="search_fragment_choose_origin_location">Choose This Origin</string>
    <string name="search_fragment_choose_timing_title">Select your preferred date and time</string>
    <string name="search_fragment_choose_timing_cta_confirm">Confirm</string>
    <string name="search_fragment_choose_timing_cta_cancel">Cancel</string>
    <string name="ride_detail_config_fragment_title_ride_detail">Ride Details</string>
    <string name="ride_detail_config_fragment_section_title_driver_gender">Driver\'s Gender</string>
    <string name="ride_detail_config_fragment_section_title_vehicle_type">Vehicle Type</string>
    <string name="ride_detail_config_fragment_section_title_schedule_date">Ride Date</string>
    <string name="ride_detail_config_fragment_section_title_schedule_time">Ride Time</string>
    <string name="ride_detail_config_fragment_section_title_schedule_date_time_reminder">*Current date time will be selected if leave blank</string>
    <string name="ride_detail_config_fragment_cta_button_find_ride">Find Ride</string>
    <string name="ride_detail_config_fragment_cta_button_create_ride">Create Ride</string>
    <string name="matched_ride_fragment_title_matching_result">Matching Result</string>
    <string name="matched_ride_fragment_searching_for_ride">Searching For Ride...</string>
    <string name="matched_ride_fragment_vehicle_capacity">%d Seats</string>
    <string name="matched_ride_fragment_ride_available_seats">%d seats left</string>
    <string name="matched_ride_fragment_ride_found_result_number">We found %d drivers for you</string>
    <string name="matched_ride_fragment_ride_result_error">Oops! There is no ride matches your requirement</string>
    <string name="matched_ride_fragment_ride_result_error_cta">Create your own ride</string>
    <string name="driver_create_ride_fragment_title_create_new_ride">Create New Ride</string>
    <string name="driver_create_ride_fragment_cta_next">Next</string>
    <string name="driver_create_ride_fragment_cta_create_ride">Create Ride</string>
    <string name="driver_create_ride_fragment_section_title_vehicle">Vehicle</string>
    <string name="driver_create_ride_fragment_section_title_passenger_capacity">Passenger Capacity</string>
    <string name="driver_ride_config_fragment_title_new_ride_config">New Ride Configuration</string>
    <string name="driver_ride_config_fragment_passenger_capacity_value">%d pax</string>
    <string name="ride_detail_fragment_title_ride_detail">Ride Detail</string>
    <string name="ride_detail_fragment_section_title_driver_details">Driver details</string>
    <string name="ride_detail_fragment_section_title_ride_details">Ride details</string>
    <string name="ride_detail_fragment_driver_rating">%.1f</string>
    <string name="ride_detail_fragment_driver_rating_review">(%d reviews)</string>
    <string name="ride_detail_fragment_passengers_seat_booked">%d/%d seats booked</string>
    <string name="ride_detail_fragment_passengers_estimated_price">RM %.2f</string>
    <string name="ride_detail_fragment_ride_detail_date">Ride date:</string>
    <string name="ride_detail_fragment_ride_detail_starting_time">Starting time:</string>
    <string name="ride_detail_fragment_ride_detail_vehicle">Vehicle:</string>
    <string name="ride_detail_fragment_price_info_one_passenger">Price displayed is based on %d passenger. The fare may change if more passengers join the ride.</string>
    <string name="booking_fragment_title_booking">Booking</string>
    <string name="booking_section_title_recent">Recent</string>
    <string name="booking_error_loading">Sorry, no booking found!</string>
    <string name="booking_item_price">RM %.2f</string>
    <string name="booking_tab_item_active">Active</string>
    <string name="booking_tab_item_past">Past</string>
    <string name="booking_detail_fragment_title_booking_detail">Booking Detail</string>
    <string name="booking_detail_fragment_distance_hour_min" translatable="false" tools:ignore="ExtraTranslation">%d km - %dh %dmins</string>
    <string name="messages_fragment_title_messages">Messages</string>
    <string name="messages_section_title_notification">Notification</string>
    <string name="messages_section_title_chat">Chat</string>
    <string name="messages_messages_error_loading">Sorry, no chat found!</string>
    <string name="messages_messages_error_user_not_authenticated">Please login to proceed…</string>
    <string name="messages_messages_chat_input_hint">Type a message…</string>
    <string name="profile_user_id">\@%s</string>
    <string name="profile_section_title_my_account">My Account</string>
    <string name="profile_subsection_title_personal_info">Personal Information</string>
    <string name="profile_subsection_title_payment_method">Payment Method</string>
    <string name="profile_subsection_title_addresses">Addresses</string>
    <string name="profile_subsection_title_emergency_contact">Emergency Contact</string>
    <string name="profile_section_title_general">General</string>
    <string name="profile_subsection_title_help_center">Help Center</string>
    <string name="profile_subsection_title_settings">Settings</string>
    <string name="profile_subsection_title_feedback">Feedback</string>
    <string name="profile_subsection_title_about">About</string>
    <string name="profile_subsection_title_delete_my_account">Delete My Account</string>
    <string name="profile_guest_to_login">Please log in to view your profile and access the main features of our app</string>
    <string name="profile_log_in">Log in</string>
    <string name="profile_log_out">Log out</string>
    <string name="personal_information_title_user_profile">User Profile</string>
    <string name="personal_information_item_title_display_name">Display Name</string>
    <string name="personal_information_item_title_user_id">User ID</string>
    <string name="personal_information_item_title_gender">Gender</string>
    <string name="personal_information_item_title_mobile_number">Mobile Number</string>
    <string name="personal_information_item_title_vehicle_doc">Vehicle Documentation</string>
    <string name="personal_information_item_title_driving_license">Driving License</string>
    <string name="personal_information_title_payment_method">Payment Method</string>
    <string name="login_fragment_title_login_in_to_sharide">Log in to SHARide</string>
    <string name="login_fragment_btn_login_with_google">Continue With Google</string>
    <string name="login_fragment_btn_login_with_mobile_number">Continue With Mobile Number</string>
    <string name="login_fragment_input_country_code">+%d</string>
    <string name="login_fragment_input_mobile_number_hint">Enter phone number</string>
    <string name="login_fragment_input_verify_code_hint">Enter verification code</string>
    <string name="login_fragment_btn_verify_code_resend_countdown">Resend(%1$d)</string>
    <string name="login_fragment_btn_verify_code_resend">Resend</string>
    <string name="login_fragment_divider_or">OR</string>
    <string name="login_fragment_btn_login">Log in</string>
    <string name="login_fragment_btn_get_otp">Get OTP</string>
    <string name="login_fragment_no_account">Not yet have an account? </string>
    <string name="login_fragment_btn_sign_up">Sign up</string>
    <string name="login_fragment_bottom_dialog_title">Select Country</string>
    <string name="edit_username_fragment_message_set_username">Please set 2 – 24 characters, excluding invalid characters such as ! @ / ?</string>
    <string name="edit_user_mobile_fragment_text">Phone Number</string>
    <string name="edit_username_fragment_allowed_characters">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_.</string>
    <string name="message_add_emergency_contact" translatable="false">Add up to 3 Emergency Contacts who will be notified via SMS anytime you require an emergency assistance during a ride </string>
    <string name="message_maximum_contact_added">You\'ve added the maximum number of Emergency Contacts.</string>
    <string name="message_add_vehicle_doc" translatable="false">Let\'s get started! Fill out the details below to add a new vehicle.</string>
    <string name="vehicle_doc_fragment_choose_timing_title">Select your vehicle manufacture date</string>
    <string name="placeholder_booking_recycler_item_title">The Exchange TRX</string>
    <string name="placeholder_booking_recycler_item_date">30 Nov, 11:30 am</string>
    <string name="placeholder_booking_recycler_item_price">RM 7.00</string>
    <string name="placeholder_vehicle_plate_number">WAD3324</string>
    <string name="placeholder_vehicle_color">White</string>
    <string name="placeholder_vehicle_brand_model">Perodua Axia</string>
    <string name="placeholder_search_result_place_name">Zepp Kuala Lumpur</string>
    <string name="placeholder_search_result_place_distance_address">8.85km \u200B \u2022 \u200B Jalan Pudu, Bandar Kuala Lumpur, 55100, Wp Kuala Lumpur, Wp Kuala Lumpur</string>
</resources>