<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screen.navigation.BookingFragment">


        <TextView
            android:id="@+id/text_fragment_title_booking"
            style="@style/text_fragment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/booking_fragment_title_booking" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_booking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_booking_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_tab_item_active" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_booking_past"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_tab_item_past" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager_booking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/text_booking_section_title_recent"
            style="@style/text_section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/booking_section_title_recent"
            android:visibility="gone"
            tools:visibility="gone" />

        <!--  Example Placeholder  -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            tools:visibility="gone">

            <TextView
                android:id="@+id/text_booking_active_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/placeholder_booking_recycler_item_title"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_booking_active_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_booking_recycler_item_date"
                android:textColor="@color/system_neutral2_500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_booking_active_title" />

            <TextView
                android:id="@+id/text_booking_active_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/placeholder_booking_recycler_item_price"
                android:textColor="?attr/colorError"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider_booking_active_item"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_booking_active_date" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</layout>