<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <TextView
            android:id="@+id/text_bottom_dialog_vehicle_plate_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/placeholder_vehicle_plate_number"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_bottom_dialog_vehicle_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_vehicle_color"
            android:textColor="?android:attr/textColorHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_bottom_dialog_vehicle_plate_number" />

        <TextView
            android:id="@+id/text_bottom_dialog_vehicle_brand_model"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/placeholder_vehicle_brand_model"
            android:textColor="?android:attr/textColorHint"
            app:layout_constraintStart_toEndOf="@+id/text_bottom_dialog_vehicle_color"
            app:layout_constraintTop_toBottomOf="@+id/text_bottom_dialog_vehicle_plate_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_bottom_dialog_vehicle_thumbnail"
        android:layout_width="130dp"
        android:layout_height="73dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:src="@drawable/perodua_axia_wad3324"
        app:layout_constraintBottom_toBottomOf="@+id/text_bottom_dialog_item_country_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_bottom_dialog_item_country_code"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/perodua_axia_wad3324" />

</LinearLayout>
