<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.ride.MatchedRideFragment">


        <!--  Fragment Back Button  -->
        <ImageButton
            android:id="@+id/img_btn_matched_ride_nav_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ss_screen_width_margin"
            android:layout_marginTop="@dimen/ss_screen_top_margin"
            android:background="#00FFFFFF"
            android:scaleX="@dimen/ss_profile_subfragment_nav_icon_scale"
            android:scaleY="@dimen/ss_profile_subfragment_nav_icon_scale"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnBackground" />


        <!--  Matched Ride Result   -->
        <LinearLayout
            android:id="@+id/ll_matched_ride_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/ss_screen_width_margin"
            android:layout_marginTop="@dimen/ss_screen_top_margin"
            android:layout_marginEnd="@dimen/ss_screen_width_margin"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">


            <TextView
                android:id="@+id/text_matched_ride_fragment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:text="@string/matched_ride_fragment_title_matching_result"
                android:textSize="@dimen/fs_fragment_title" />

            <TextView
                android:id="@+id/text_matched_ride_result_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/matched_ride_fragment_ride_found_result_number" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_matched_ride"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:listitem="@layout/recycler_item_ride_item" />
        </LinearLayout>


        <!--  Loading Searching Ride   -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_matched_ride_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            app:contentPadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_matched_ride_searching_for_ride"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/matched_ride_fragment_searching_for_ride"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/progress_bar_matched_ride"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:indeterminateBehavior="repeat"
                    android:indeterminateOnly="true"
                    android:indeterminateTint="?attr/colorPrimary"
                    android:maxWidth="52dip"
                    android:maxHeight="22dip"
                    android:minWidth="52dip"
                    android:minHeight="22dip" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <!--  Error Searching Ride   -->
        <LinearLayout
            android:id="@+id/ll_matched_ride_error_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/ss_screen_top_margin"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:visibility="gone">


            <TextView
                android:id="@+id/text_matched_ride_error"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/matched_ride_fragment_ride_result_error"
                android:textColor="?attr/colorOutline"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_matched_ride_error_cta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/matched_ride_fragment_ride_result_error_cta"
                android:textColor="?attr/colorSecondary" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>